feature(message-attachment): implement logic getChatHistory